feat: make counter declarations resilient